--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "healthbuddy-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "The Health Buddy API",
+  "engines": {
+    "node": "18.x"
+  },
   "main": "dist/server.js",
   "scripts": {
     "start": "nodemon src/server.ts",
